force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Account__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>