force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Activity_Logging_Error__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Activity_Logging_Error__c</fullName>
    <label>Activity Logging Error</label>
    <type>TextArea</type>
</CustomField>