force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Date_Created__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Date_Created__c</fullName>
    <label>Date Created</label>
    <type>DateTime</type>
</CustomField>