force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Direction__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>outbound-api</fullName>
            </value>
            <value>
                <fullName>outbound-call</fullName>
            </value>
            <value>
                <fullName>outbound-reply</fullName>
            </value>
            <value>
                <fullName>inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>