force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__From_Number__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__From_Number__c</fullName>
    <label>From Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>