force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Message_SID__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Message_SID__c</fullName>
    <description>This is the unique ID the Twilio assigns to a message being sent from their platform</description>
    <externalId>true</externalId>
    <label>Message SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>