force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Message_SID_Unique__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Message_SID_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is the replica field of Message_SID__c. Don&apos;t manipulate this field as it&apos;s is being used internally to avoid duplicate messages.</description>
    <externalId>true</externalId>
    <label>Message SID Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>