force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Messaging_Service_Sid__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Messaging_Service_Sid__c</fullName>
    <label>Messaging Service Sid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>