force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Owned__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Owned</label>
    <type>Checkbox</type>
</CustomField>