force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Resource_Location__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Resource_Location__c</fullName>
    <label>Resource Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>