force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Send_Future_Message__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Send_Future_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Future Message</label>
    <type>Checkbox</type>
</CustomField>