force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Send_Future_Message_At__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Send_Future_Message_At__c</fullName>
    <description>Includes the Scheduled Date &amp; Time of 1:1 Message</description>
    <label>Send Future Message At</label>
    <type>DateTime</type>
</CustomField>