force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__SF_Parent_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__SF_Parent_Record_Id__c</fullName>
    <description>This field will store the record that the message</description>
    <label>SF Parent Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>