force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Status__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Status__c</fullName>
    <description>This is an enumerated list from the Twilio API of the status of a message</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>accepted</fullName>
            </value>
            <value>
                <fullName>queued</fullName>
            </value>
            <value>
                <fullName>sending</fullName>
            </value>
            <value>
                <fullName>sent</fullName>
            </value>
            <value>
                <fullName>delivered</fullName>
            </value>
            <value>
                <fullName>undelivered</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>received</fullName>
            </value>
            <value>
                <fullName>receiving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>