force-app/main/default/objects/TwilioSF__Message__c/fields/TwilioSF__Twilio_Delay_for_Autoresponder__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Twilio_Delay_for_Autoresponder__c</fullName>
    <description>Use this field only in scheduled Actions of process builder, Whenever you want to send autoresponder SMS for incoming messages</description>
    <formula>CreatedDate   - 0.0409</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Twilio Delay for Autoresponder</label>
    <type>DateTime</type>
</CustomField>