force-app/main/default/objects/TwilioSF__Message__c/validationRules/TwilioSF__ScheduledTimeShouldNotBeEmtpy.validationRule-meta.xml
<ValidationRule>
    <fullName>TwilioSF__ScheduledTimeShouldNotBeEmtpy</fullName>
    <active>true</active>
    <description>If user is scheduling the message and not providing the schedule time then this validation will throw error message.</description>
    <errorConditionFormula>AND(TwilioSF__Send_Future_Message__c, ISBLANK( TwilioSF__Send_Future_Message_At__c))</errorConditionFormula>
    <errorDisplayField>TwilioSF__Send_Future_Message_At__c</errorDisplayField>
    <errorMessage>Send Future Message At date cannot be empty.</errorMessage>
</ValidationRule>