force-app/main/default/objects/TwilioSF__Message__c/listViews/TwilioSF__Accepted.listView-meta.xml
<ListView>
    <fullName>TwilioSF__Accepted</fullName>
    <columns>NAME</columns>
    <columns>TwilioSF__To_Number__c</columns>
    <columns>TwilioSF__Body__c</columns>
    <columns>TwilioSF__Message_SID__c</columns>
    <columns>TwilioSF__Resource_Location__c</columns>
    <columns>TwilioSF__SF_Parent_Record_Id__c</columns>
    <columns>TwilioSF__Twilio_Console_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TwilioSF__Status__c</field>
        <operation>equals</operation>
        <value>accepted</value>
    </filters>
    <label>Accepted</label>
</ListView>