force-app/main/default/objects/TwilioSF__Message__c/listViews/TwilioSF__All.listView-meta.xml
<ListView>
    <fullName>TwilioSF__All</fullName>
    <columns>NAME</columns>
    <columns>TwilioSF__Date_Sent__c</columns>
    <columns>TwilioSF__To_Number__c</columns>
    <columns>TwilioSF__Body__c</columns>
    <columns>TwilioSF__Status__c</columns>
    <columns>TwilioSF__Message_SID__c</columns>
    <columns>TwilioSF__Resource_Location__c</columns>
    <columns>TwilioSF__SF_Parent_Record_Id__c</columns>
    <columns>TwilioSF__Twilio_Console_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>