force-app/main/default/objects/TwilioSF__Message__c/listViews/TwilioSF__API_Failures.listView-meta.xml
<ListView>
    <fullName>TwilioSF__API_Failures</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>TwilioSF__To_Number__c</columns>
    <columns>TwilioSF__Body__c</columns>
    <columns>TwilioSF__API_Failure_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TwilioSF__Status__c</field>
        <operation>equals</operation>
        <value>failed</value>
    </filters>
    <filters>
        <field>TwilioSF__Error_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>API Failures</label>
</ListView>