force-app/main/default/objects/TwilioSF__Message__c/listViews/TwilioSF__Failed_To_Log_Activity.listView-meta.xml
<ListView>
    <fullName>TwilioSF__Failed_To_Log_Activity</fullName>
    <columns>NAME</columns>
    <columns>TwilioSF__To_Number__c</columns>
    <columns>TwilioSF__Body__c</columns>
    <columns>TwilioSF__Status__c</columns>
    <columns>TwilioSF__Message_SID__c</columns>
    <columns>TwilioSF__Resource_Location__c</columns>
    <columns>TwilioSF__SF_Parent_Record_Id__c</columns>
    <columns>TwilioSF__Twilio_Console_URL__c</columns>
    <columns>TwilioSF__Activity_Logging_Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TwilioSF__Activity_Logging_Failed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Failed To Log Activity</label>
</ListView>