force-app/main/default/objects/TwilioSF__Message__c/listViews/TwilioSF__Inbound_Messages.listView-meta.xml
<ListView>
    <fullName>TwilioSF__Inbound_Messages</fullName>
    <columns>NAME</columns>
    <columns>TwilioSF__Date_Sent__c</columns>
    <columns>TwilioSF__From_Number__c</columns>
    <columns>TwilioSF__Body__c</columns>
    <columns>TwilioSF__Status__c</columns>
    <columns>TwilioSF__Message_SID__c</columns>
    <columns>TwilioSF__Resource_Location__c</columns>
    <columns>TwilioSF__SF_Parent_Record_Id__c</columns>
    <columns>TwilioSF__Twilio_Console_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TwilioSF__Direction__c</field>
        <operation>equals</operation>
        <value>inbound</value>
    </filters>
    <label>Inbound Messages</label>
</ListView>