force-app/main/default/objects/TwilioSF__Message__c/listViews/TwilioSF__Scheduled_Messages.listView-meta.xml
<ListView>
    <fullName>TwilioSF__Scheduled_Messages</fullName>
    <columns>NAME</columns>
    <columns>TwilioSF__Date_Sent__c</columns>
    <columns>TwilioSF__From_Number__c</columns>
    <columns>TwilioSF__Body__c</columns>
    <columns>TwilioSF__To_Number__c</columns>
    <columns>TwilioSF__Status__c</columns>
    <columns>TwilioSF__Send_Future_Message__c</columns>
    <columns>TwilioSF__Send_Future_Message_At__c</columns>
    <columns>TwilioSF__Message_SID__c</columns>
    <columns>TwilioSF__Resource_Location__c</columns>
    <columns>TwilioSF__Twilio_Console_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TwilioSF__Send_Future_Message_At__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Scheduled Messages</label>
</ListView>